Operation for fetching title details and updating the channel with the information. Hooked up outlets for the asset details interface controller. Also created the progress view fo the same interface controller

--- a/Dionysus Watch App/Interface.storyboard
+++ b/Dionysus Watch App/Interface.storyboard
@@ -105,6 +105,7 @@
                                     <connections>
                                         <outlet property="iconImage" destination="8Rc-qQ-ICd" id="FRJ-34-oSK"/>
                                         <outlet property="titleLabel" destination="Ccf-zS-mfO" id="7y5-La-RlV"/>
+                                        <segue destination="jJX-CT-bTe" kind="push" id="LoK-mn-G6U"/>
                                     </connections>
                                 </tableRow>
                             </items>
@@ -333,7 +334,7 @@
         <!--Asset Detail-->
         <scene sceneID="ZOz-M4-ErN">
             <objects>
-                <controller spacing="0.0" id="jJX-CT-bTe" userLabel="Asset Detail">
+                <controller identifier="AssetDetail" spacing="0.0" id="jJX-CT-bTe" userLabel="Asset Detail" customClass="AssetDetailInterfaceController" customModule="Dionysus_WatchKit_Extension">
                     <items>
                         <group width="1" height="0.5" alignment="left" layout="vertical" radius="0.0" spacing="0.0" hasDetent="YES" id="XLX-25-gRF">
                             <items>
@@ -347,10 +348,8 @@
                                         <group width="0.5" height="1" alignment="left" radius="0.0" spacing="0.0" id="VqY-54-nBJ">
                                             <color key="backgroundColor" red="0.11372549830000001" green="0.73725491759999995" blue="0.61176472900000001" alpha="1" colorSpace="deviceRGB"/>
                                         </group>
-                                        <group width="0.5" height="1" alignment="left" radius="0.0" spacing="0.0" id="Ds0-UK-BPL">
-                                            <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        </group>
                                     </items>
+                                    <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                 </group>
                             </items>
                         </group>
@@ -362,15 +361,37 @@
                                 <group width="1" height="10" alignment="left" id="GRw-X0-gD7"/>
                                 <label alignment="left" text="Description" id="mfx-jW-ux7"/>
                                 <group width="1" height="10" alignment="left" id="Bq0-ba-Fph"/>
-                                <button width="0.90000000000000002" alignment="center" title="Watch" id="7m8-zO-jHY"/>
-                                <button width="0.90000000000000002" alignment="center" title="Record" id="FWM-At-31S"/>
-                                <button width="0.90000000000000002" alignment="center" title="Open On Device" id="72L-mW-stM"/>
+                                <button width="0.90000000000000002" alignment="center" title="Watch" id="7m8-zO-jHY">
+                                    <connections>
+                                        <action selector="watch" destination="jJX-CT-bTe" id="vha-wz-e7T"/>
+                                    </connections>
+                                </button>
+                                <button width="0.90000000000000002" alignment="center" title="Record" id="FWM-At-31S">
+                                    <connections>
+                                        <action selector="record" destination="jJX-CT-bTe" id="3fT-MU-I6R"/>
+                                    </connections>
+                                </button>
+                                <button width="0.90000000000000002" alignment="center" title="Open On Device" id="72L-mW-stM">
+                                    <connections>
+                                        <action selector="open" destination="jJX-CT-bTe" id="CIC-mP-C9B"/>
+                                    </connections>
+                                </button>
                             </items>
                         </group>
                     </items>
+                    <connections>
+                        <outlet property="assetImageGroup" destination="Q0a-gw-sAz" id="nbC-mV-QWw"/>
+                        <outlet property="descriptionLabel" destination="mfx-jW-ux7" id="SNT-xu-QQD"/>
+                        <outlet property="emptynessGroup" destination="7rm-gT-2pd" id="cRn-mY-gCY"/>
+                        <outlet property="episodeLabel" destination="BFl-Ma-d5F" id="27v-tg-2sB"/>
+                        <outlet property="networkImage" destination="gbW-tY-ywy" id="9cu-mL-h1t"/>
+                        <outlet property="progressGroup" destination="VqY-54-nBJ" id="V4H-0Y-OlD"/>
+                        <outlet property="timeLabel" destination="ANu-aN-xw2" id="8CG-IX-6ZM"/>
+                        <outlet property="titleLabel" destination="csH-WR-6s4" id="tmZ-eM-Qjc"/>
+                    </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="713" y="343"/>
+            <point key="canvasLocation" x="702" y="417.5"/>
         </scene>
         <!--Favorites-->
         <scene sceneID="qWl-ly-F2h">
